--- a/BildProgram/MainWindow.xaml
+++ b/BildProgram/MainWindow.xaml
@@ -21,6 +21,7 @@
                     </Image>
                     <Button x:Name="LoadImageButton" Content="Load" HorizontalAlignment="Left" Margin="636,467,0,0" VerticalAlignment="Top" Width="140" Height="58" Click="LoadImageButton_Click"/>
                     <Button x:Name="TestButton" Content="test" HorizontalAlignment="Left" Margin="10,467,0,0" VerticalAlignment="Top" Width="119" Height="58" Click="TestButton_Click"/>
+                    <Button x:Name="SavePicButton" Content="Save Pic" HorizontalAlignment="Left" Margin="177,467,0,0" VerticalAlignment="Top" Width="120" Height="58" Click="SavePicButton_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="other">
