--- a/BildProgram/MainWindow.xaml
+++ b/BildProgram/MainWindow.xaml
@@ -5,23 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BildProgram"
         mc:Ignorable="d"
-        Title="Bild Program" Height="594" Width="800" Background="#FFB6B6B6">
+        Title="Bild Program" Height="873.221" Width="902.597" Background="#FFB6B6B6">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="16*"/>
             <ColumnDefinition Width="17*"/>
         </Grid.ColumnDefinitions>
-        <TabControl HorizontalAlignment="Left" Height="563" VerticalAlignment="Top" Width="792" Grid.ColumnSpan="2">
+        <TabControl HorizontalAlignment="Left" Height="828" VerticalAlignment="Top" Width="881" Grid.ColumnSpan="2">
             <TabItem x:Name="MainImageTab" Header="Main">
                 <Grid Background="#FFE5E5E5">
-                    <Image x:Name="ImageViewWindow" Height="361" Margin="124,0,0,115" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="531" Stretch="None">
+                    <Image x:Name="ImageViewWindow" Height="701" Margin="10,0,0,89" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="827" Stretch="None">
                         <Image.OpacityMask>
                             <SolidColorBrush Color="#FF99B4D1"/>
                         </Image.OpacityMask>
                     </Image>
-                    <Button x:Name="LoadImageButton" Content="Load" HorizontalAlignment="Left" Margin="636,467,0,0" VerticalAlignment="Top" Width="140" Height="58" Click="LoadImageButton_Click"/>
-                    <Button x:Name="TestButton" Content="test" HorizontalAlignment="Left" Margin="10,467,0,0" VerticalAlignment="Top" Width="119" Height="58" Click="TestButton_Click"/>
-                    <Button x:Name="SavePicButton" Content="Save Pic" HorizontalAlignment="Left" Margin="177,467,0,0" VerticalAlignment="Top" Width="120" Height="58" Click="SavePicButton_Click"/>
+                    <Button x:Name="LoadImageButton" Content="Load" HorizontalAlignment="Left" Margin="714,732,0,0" VerticalAlignment="Top" Width="140" Height="58" Click="LoadImageButton_Click"/>
+                    <Button x:Name="TestButton" Content="test" HorizontalAlignment="Left" Margin="10,732,0,0" VerticalAlignment="Top" Width="119" Height="58" Click="TestButton_Click"/>
+                    <Button x:Name="SavePicButton" Content="Save Pic" HorizontalAlignment="Left" Margin="163,732,0,0" VerticalAlignment="Top" Width="120" Height="58" Click="SavePicButton_Click"/>
+                    <Slider x:Name="SliderIntencity" HorizontalAlignment="Left" Margin="314,744,0,0" VerticalAlignment="Top" Width="229" Background="#FF4D4D4D" BorderBrush="#FF1CAA5C" Foreground="White" Height="35" Maximum="250" RenderTransformOrigin="0.505,0.5" TickPlacement="Both" SmallChange="1" Value="230" ValueChanged="SliderIntencity_ValueChanged" IsSnapToTickEnabled="True" Minimum="210"/>
+                    <Button x:Name="AutoGenerateButton" Content="Auto Generate Picture" HorizontalAlignment="Left" Margin="351,10,0,0" VerticalAlignment="Top" Width="139" Height="47" Click="AutoGenerateButton_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="other">
