--- a/BildProgram/MainWindow.xaml
+++ b/BildProgram/MainWindow.xaml
@@ -26,6 +26,7 @@
                     <Button x:Name="AutoGenerateButton" Content="Auto Generate Picture" HorizontalAlignment="Left" Margin="351,10,0,0" VerticalAlignment="Top" Width="139" Height="47" Click="AutoGenerateButton_Click"/>
                     <CheckBox x:Name="checkboxTest" Content="Red Marks" HorizontalAlignment="Left" Margin="508,514,0,0" VerticalAlignment="Top"/>
                     <Slider x:Name="RedSlider" HorizontalAlignment="Left" Margin="682,331,0,0" VerticalAlignment="Top" Height="164" Width="30" Background="#FF5B5B5B" Orientation="Vertical" Value="1" ValueChanged="RedSlider_ValueChanged" Maximum="1"/>
+                    <Label x:Name="BlueLayerLabel" Content="Blue Layer" HorizontalAlignment="Left" Margin="664,300,0,0" VerticalAlignment="Top"/>
                 </Grid>
             </TabItem>
             <TabItem Header="other">
